# simple-visualizer

./: Cargo.toml  README.md  license.txt
src/: audio.rs  fft.rs  main.rs  tui.rs
